# Profiap_abstracts_BERTopic_modelling

./: .gitignore  01_train_bertopic.py  02_eval_octis.py  LICENSE  README.md  pyproject.toml
models/: metrics_by_cluster_size.csv  runs_catalog.csv  topics_10.json  topics_15.json  topics_20.json  topics_25.json  topics_35.json  topics_40.json  topics_45.json  topics_5.json  topics_50.json
