[project]
name = "bertopic-profiap-project"
version = "0.1.0"
description = "Topic-modelling pipeline with BERTopic + OCTIS on PROFIAP's abstracts."
authors = [
    {name = "Souza D.T",email = "duarte.t.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "octis (>=1.14.0,<2.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "bertopic (>=0.17.0,<0.18.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
